--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -1,5 +1,5 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-light
-  a.navbar-brand(href='/home')
+  a.navbar-brand(href='/index')
     img.d-inline-block.align-top(src='/assets/brand/yve.svg' width='30' height='30' alt='')
     b.brand YVE
   button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
