--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,8 +1,9 @@
 doctype html
 html
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    include includes/head.pug
   body
     include includes/header.pug
     block content
+
+
