--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,4 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  a.btn.btn-primary.btn-lg.main-btn(href='/catalog') Class Catalog
