--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,5 @@ html
   head
     include includes/head.pug
   body
-    include includes/header.pug
     block content
-
-
+    include includes/footer.pug
