--- a/views/index.pug
+++ b/views/index.pug
@@ -4,3 +4,4 @@ block content
   h1= title
   p Welcome to #{title}
   a.btn.btn-primary.btn-lg.main-btn(href='/catalog') Class Catalog
+  img(src="/icon/wcu.svg")
