--- a/views/catalog.pug
+++ b/views/catalog.pug
@@ -1,14 +1,14 @@
 extends layout
 
 block content
-	h1.title List of courses
-	ol.s1
-		li#s1| University
-		li| University???
-		li| University???
-		li| University???
-		li| University???
-		li| University???
-		li| University???
-
-	a.btn.btn-primary.btn-lg.main-btn(href='/catalog') Class Catalog
+    div.container
+      h1.title List of courses
+      ol.s1
+        li#s1| University
+        li| University???
+        li| University???
+        li| University???
+        li| University???
+        li| University???
+        li| University???
+      a.btn.btn-primary.btn-lg.main-btn(href='/') Back to Home
