--- a/views/index.pug
+++ b/views/index.pug
@@ -8,5 +8,8 @@ block content
       .col-xs-12.col-md-8
         h1.title= title
     p.lead Welcome to #{title}
+    form.form-inline
+      input.form-control.mr-sm-2(type="search" placeholder="Search" aria-label="Search")
+      button.btn.btn-outline-success.my-2.my-sm-0(type="submit") Search
     a.btn.btn-primary.btn-lg.main-btn(href='/catalog') Class Catalog
   
