--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,6 @@ html
   head
     include includes/head.pug
   body
-    include includes/header
+    //include includes/header
     block content
     include includes/footer.pug
