--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,10 +10,17 @@
 	/*src: url(AlanisHand.ttf);*/
 }
 
+@font-face {
+	font-family: qarmic-sans;
+	src: url(/fonts/Qarmic_sans_Abridged.ttf);
+}
+
 html body {
   /*font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;*/
-  font-family: alanishand;
-	background: linear-gradient(#d2691e,yellow);
+	font-family: qarmic-sans;
+	background: linear-gradient(rgb(246, 106, 65), rgb(248, 171, 79), rgb(252, 238, 94));
+	/*background: -webkit-gradient(linear, left top, left bottom, from(#d2691e), to(red), from(red), to(yellow)) fixed;*/
+	height: 100vh;
 }
 
 a {
@@ -36,19 +43,13 @@ h1.title {
 	display: block;
 	padding-top: 60px;
 }
-
+/*
 nav.navbar {
   margin: 0;
-}
+}*/
 img.main-img {
   width: 40%;
   max-width: 400px;
   margin: auto;
   display: block;
-}
-
-.square {
-    width: 100%;
-    height: 100px;
-    Background-color: #D2691E;/* Your Color */
 }
