added alert and img

--- a/views/help.pug
+++ b/views/help.pug
@@ -7,7 +7,7 @@ block content
       .card-body
         h3 Contact Us
         br
-        a(href='mailto://')
+        a(href='mailto://admin@wildchickenuniversity.com')
           button.btn.btn-primary.btn-large.buy-btn email
         br
         button.btn.buy-btn.btn-primary(type='button' data-toggle='modal' data-target='#contacts') Contacts
