--- a/views/reset.pug
+++ b/views/reset.pug
@@ -7,6 +7,7 @@ block content
     .col-sm-12.col-md-8
       .card.signin-card
         .card-block
+          img.main-img(src="/icon/wcu.svg")
           img#signin-img.img-fluid(src='/assets/brand/login.JPG')
           form(method='post', action='/users/reset')
             .form-group
