--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -1,5 +1,5 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-light(class=(title=='Wild Chicken University' ? 'invisible' : ''))
-  a.navbar-brand(href='/index')
+  a.navbar-brand(href='/')
     img.d-inline-block.align-top(src='/icon/wcu.svg' width='40' height='40' alt='')
     b.brand Wild Chicken University
   button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
