--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,7 @@ html
     include includes/head.pug
   body
     include includes/header
+    include includes/alert.pug
     br
     block content
     include includes/footer.pug
