--- a/views/login.pug
+++ b/views/login.pug
@@ -7,6 +7,7 @@ block content
     .col-sm-12.col-md-8
       .card.signin-card
         .card-block#signin-img
+          img.main-img(src="/icon/wcu.svg")
           form#signin-form(method='post', action='/users/login')
             .form-group
               input#usernameInput.form-control(name='username' type='text' required='required' placeholder='Username')
