--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,9 @@ block content
       .col-xs-12.col-md-8
         h1.title= title
     br
-    p.lead Welcome to #{title}
+    h1.looking Looking for a course?
+    br
+    br
     form.form-inline
       input.form-control.mr-sm-2(type="search" placeholder="Search" aria-label="Search")
       button.btn.btn-outline-success.my-2.my-sm-0(type="submit") Search
