--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,11 @@
 @font-face {
 	font-family: alanishand;
 	src: url(/fonts/AlanisHand.ttf);
-	/*src: url(njnaruto.ttf);*/
 }
 
 @font-face {
 	font-family: ninjanaruto;
 	src: url(/fonts/njnaruto.ttf);
-	/*src: url(AlanisHand.ttf);*/
 }
 
 @font-face {
@@ -43,33 +41,43 @@ h1.title {
 	display: block;
 	padding-top: 60px;
 }
-<<<<<<< HEAD
 
 h1.looking {
 	text-align: center;
 	font-weight: bold;
 	/*font-size: 35px;*/
 }
-
-form.form-inline {
-	width: 100%;
-=======
-b.brand {
-	padding: 5px;
-	margin-bottom: -5px;
->>>>>>> a8d56644c7495bd6a2684bc9bfc01b0d409a3a46
+form {
+	text-align: center;
 }
 /*
 nav.navbar {
   margin: 0;
 }*/
+.searchbar {
+	width: 60% !important;
+	display: inline-block !important;
+	margin: 0 auto;
+}
+.btn {
+	margin-left: 30px;
+}
 img.main-img {
   width: 40%;
   max-width: 400px;
   margin: auto;
   display: block;
 }
+.input-lg {
+    height: 60px;
+    padding: 10px 16px;
+    font-size: 30px !important;
+    line-height: 1.3333333;
+    border-radius: 6px;
+}
+
 .btn.main-btn {
   display: block;
   margin: auto;
+  width: 40%;
 }
