--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,6 +25,11 @@ a {
   color: #00B7FF;
 }
 
+.logotext {
+	font-size: 25px;
+	font-weight: bold;
+}
+
 ol.s1 {
 	font-family: alanishand;
 }
@@ -46,6 +51,9 @@ h1.looking {
 	text-align: center;
 	font-weight: bold;
 	/*font-size: 35px;*/
+}
+h3.looking {
+	text-align: center;
 }
 form {
 	text-align: center;
@@ -69,9 +77,9 @@ img.main-img {
   display: block;
 }
 .input-lg {
-    height: 60px;
+    height: 50px;
     padding: 10px 16px;
-    font-size: 30px !important;
+    font-size: 25px !important;
     line-height: 1.3333333;
     border-radius: 6px;
 }
