--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,10 @@ block content
     br
     form
       input.form-control.input-lg.searchbar(type="search" placeholder="Ex: Linear Algebra" aria-label="Search")
-      button.btn.btn-outline-success.my-2.my-sm-0(type="submit") Search
+      button.btn.btn-outline-success.my-2.my-sm-0.input-lg(type="submit") Search
+    br
+    br
+    br
     br
     br
     h3.looking Alternatively, take a look at our class catalog
