--- a/views/landing.pug
+++ b/views/landing.pug
@@ -45,7 +45,7 @@ head
         .features-extended-inner.section-inner.has-top-divider
           .features-extended-header.text-center
             .container-sm
-              h2.section-title.mt-0 What is WCU?
+              h2.section-title.mt-0#about What is WCU?
               p.section-paragraph
                 | 
           .feature-extended
@@ -227,7 +227,7 @@ head
                       span Lorem ipsum dolor sit consectetur
                 .pricing-table-cta
                   a.button.button-shadow.button-block(href='#') Get started
-          .pricing-faqs.container-sm
+          .pricing-faqs.container-sm#faq
             ul.accordion
               li
                 .accordion-title
@@ -267,9 +267,9 @@ head
           li
             a(href='/help') Contact
           li
-            a(href='#') About us
+            a(href='#about') About us
           li
-            a(href='#') FAQ&apos;s
+            a(href='#faq') FAQ&apos;s
           li
             a(href='/help') Support
         ul.footer-social-links.list-reset
