--- a/views/catalog.pug
+++ b/views/catalog.pug
@@ -2,7 +2,8 @@ extends layout
 
 block content
     div.container
-      h1.title List of courses
+      h3.looking List of courses
+      br
       ol.s1
         li#s1| University
         li| University???
