added search function for each courses

--- a/views/landing.pug
+++ b/views/landing.pug
@@ -35,7 +35,7 @@ head
               img(src='/icon/wcu.svg')
     section.clients.section
       .container
-        .hero-form.newsletter-form.field.field-grouped.is-revealing
+        form.hero-form.newsletter-form.field.field-grouped.is-revealing(method='post', action='/')
           .control.control-expanded
             input.input(type='text' name='class' placeholder='Your Class')
           .control 
