Added back the start learning message

--- a/views/landing.pug
+++ b/views/landing.pug
@@ -35,6 +35,10 @@ head
               img(src='/icon/wcu.svg')
     section.clients.section
       .container
+        .features-extended-inner.section-inner.has-top-divider
+           .features-extended-header.text-center
+             .container-sm
+               h2.section-title.mt-0#about Start Learning Now:
         form.hero-form.newsletter-form.field.field-grouped.is-revealing(method='post', action='/')
           .control.control-expanded
             input.input(type='text' name='class' placeholder='Ex: Linear Algebra')
