--- a/views/landing.pug
+++ b/views/landing.pug
@@ -156,14 +156,15 @@ head
               .testimonial-inner
                 .testimonial-main
                   .testimonial-header
-                    img.mb-16(src='' alt='Testimonial')
+                    img.mb-16(src='/images/wu.jpg' alt='Testimonial')
                   .testimonial-body
+                    br
                     p
-                      | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
+                      | This platform enabled me to learn courses from various world-class universities. Through learning microeconomics courses in MIT and Stanford at the same time, I was able to gain a solid and well-round understanding of the subject.
                 .testimonial-footer
-                  .testimonial-name Mark Simons
+                  .testimonial-name David Wu
                   .testimonial-link
-                    a(href='#') company.com
+                    a(href='#') Duke University
             .testimonial.text-center.text-xs.is-revealing
               .testimonial-inner
                 .testimonial-main
