--- a/views/landing.pug
+++ b/views/landing.pug
@@ -8,22 +8,13 @@ head
   link(rel='stylesheet' href='/stylesheets/home.css')
   link(rel='stylesheet' href='/stylesheets/land.css')
   script(src='https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js')
-.body-wrap.boxed-container
-  header.site-header
-    .header-sun.is-revealing
-      svg(src='/icon/wcu.svg')
-    .container
-      .site-header-inner
-        .brand.header-brand
-          h1.m-0
-            a(href='/landing')
-              svg()
   main
     section.hero
       .container
         .hero-inner
           .hero-copy
             h1.hero-title.mt-0 Wild Chicken Univeristy
+              img.main-img(src="/icon/wcu.svg")
             p.hero-paragraph
               | A place to learn.
             p.hero-cta
