--- a/views/landing.pug
+++ b/views/landing.pug
@@ -150,7 +150,7 @@ head
                   .testimonial-body
                     br
                     p
-                      | This platform enabled me to learn courses from various world-class universities. Through learning microeconomics courses in MIT and Stanford at the same time, I was able to gain a solid and well-round understanding of the subject.
+                      | This platform allowed me to learn courses from various world-class universities. Through learning microeconomics courses in MIT and Stanford at the same time, I was able to gain a solid and well-round understanding of the subject.
                 .testimonial-footer
                   .testimonial-name David Wu
                   .testimonial-link
@@ -175,7 +175,7 @@ head
                     img.mb-16(src='' alt='Testimonial')
                   .testimonial-body
                     p
-                      | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
+                      | I am a high school student adn I wish to get a headstart in college math. WCU turned out to be just the right website for me. I was able to grasp advanced concepts more easily and am now more confident in succeeding in college.
                 .testimonial-footer
                   .testimonial-name David Harris
                   .testimonial-link
