--- a/views/landing.pug
+++ b/views/landing.pug
@@ -190,14 +190,14 @@ body
               .testimonial-inner
                 .testimonial-main
                   .testimonial-header
-                    img.mb-16(src='' alt='Testimonial')
+                    img.mb-16(src='/images/zhu.jpg' alt='Testimonial')
                   .testimonial-body
                     p
                       | I am a high school student adn I wish to get a headstart in college math. WCU turned out to be just the right website for me. I was able to grasp advanced concepts more easily and am now more confident in succeeding in college.
                 .testimonial-footer
-                  .testimonial-name David Harris
+                  .testimonial-name Jiaqi Zhu
                   .testimonial-link
-                    a(href='#') traction.com
+                    a(href='#') Suzhou High School
   footer.site-footer
     .container
       .site-footer-inner
