--- a/views/landing.pug
+++ b/views/landing.pug
@@ -164,7 +164,7 @@ body
               .testimonial-inner
                 .testimonial-main
                   .testimonial-header
-                    img.mb-16(src='/images/wu.jpg' alt='Testimonial')
+                    img.mb-16(src='/images/david.jpg' alt='Testimonial')
                   .testimonial-body
                     br
                     p
