--- a/views/catalog.pug
+++ b/views/catalog.pug
@@ -5,11 +5,29 @@ block content
       h3.looking List of courses
       br
       ol.s1
-        li#s1| University
-        li| University???
-        li| University???
-        li| University???
-        li| University???
-        li| University???
-        li| University???
+        li
+          .card
+            .card-header
+              | Linear Algebra
+              .card-body
+                h5.card-title Linear Algebra
+                p.card-text Linear algebra is central to almost all areas of mathematics. For instance, linear algebra is fundamental in modern presentations of geometry, including for defining basic objects such as lines, planes and rotations.
+                a.btn.btn-primary(href='/linearAlgebra') Go to the course
+        li
+          .card
+            .card-header
+              | Python
+              .card-body
+                h5.card-title Introduction to Python
+                p.card-text Python is a general-purpose interpreted, interactive, object-oriented, and high-level programming language. It was created by Guido van Rossum during 1985- 1990. Like Perl, Python source code is also available under the GNU General Public License (GPL). 
+                a.btn.btn-primary(href='/linearAlgebra') Go to the course
+        li
+          .card
+            .card-header
+              | Microeconomics
+              .card-body
+                h5.card-title Microeconomics
+                p.card-text Microeconomics is a branch of economics that studies the behavior of individuals and firms in making decisions regarding the allocation of scarce resources and the interactions among these individuals and firms.
+                a.btn.btn-primary(href='/linearAlgebra') Go to the course
       a.btn.btn-primary.btn-lg.main-btn(href='/') Back to Home
+      p Intro are retreaved from wikipedia
