--- a/views/microeconomics.pug
+++ b/views/microeconomics.pug
@@ -1,15 +1,12 @@
 extends layout
 
 block content
-    div.container
-      h1.title WCU course home - microeconomics
-      ol.s1
-        li#s1| University
-        li| University???
-        li| University???
-        li| University???
-        li| University???
-        li| University???
-        li| University???
+    .card
+      .card-header
+        | Featured
+      .card-body
+        h5.card-title Special title treatment
+        p.card-text With supporting text below as a natural lead-in to additional content.
+        a.btn.btn-primary(href='#') Go somewhere
       a.btn.btn-primary.btn-lg.main-btn(href='/') Back to Home
       a.btn.btn-primary.btn-lg.main-btn(href='/catalog') Back to catalog
