--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,7 +39,7 @@ li.s1 {
 
 h1.title {
 	font-size: 40px;
-	font-family: ninjanaruto;
+	font-family: qarmic-sans;
 	height: 100%;
 	margin: auto;
 	display: block;
