added course info

--- a/views/linearAlgebra.pug
+++ b/views/linearAlgebra.pug
@@ -2,14 +2,32 @@ extends layout
 
 block content
     div.container
-      h1.title WCU course home -linearAlgebra
-      ol.s1
-        li#s1| University
-        li| University???
-        li| University???
-        li| University???
-        li| University???
-        li| University???
-        li| University???
-      a.btn.btn-primary.btn-lg.main-btn(href='/') Back to Home
-      a.btn.btn-primary.btn-lg.main-btn(href='/catalog') Back to catalog
+      h3.title Linear Algebra Courses
+      br
+      .card
+        .card-header
+          | MIT
+          .card-body
+            h5.card-title Linear Algebra
+            a.btn.btn-primary(href='https://ocw.mit.edu/courses/mathematics/18-06-linear-algebra-spring-2010/') Go to the course
+      br
+      .card
+        .card-header
+          | UT Austin
+          .card-body
+            h5.card-title Linear Algebra - Foundations to Frontiers
+            a.btn.btn-primary(href='https://www.edx.org/course/linear-algebra-foundations-to-frontiers') Go to the course
+      br
+      .card
+        .card-header
+          | Davidson
+          .card-body
+            h5.card-title Applications of Linear Algebra
+            a.btn.btn-primary(href='/https://www.edx.org/course/applications-linear-algebra-part-1-davidsonx-d003x-1') Go to the course
+      br
+      .card
+        .card-header
+          | CMU
+          .card-body
+            h5.card-title Linear Algebra
+            a.btn.btn-primary(href='https://www.math.cmu.edu/~gautam/teaching/2010-11/341-linear-algebra/') Go to the course
