--- a/views/python.pug
+++ b/views/python.pug
@@ -2,14 +2,46 @@ extends layout
 
 block content
     div.container
-      h1.title WCU course home - python
-      ol.s1
-        li#s1| University
-        li| University???
-        li| University???
-        li| University???
-        li| University???
-        li| University???
-        li| University???
-      a.btn.btn-primary.btn-lg.main-btn(href='/') Back to Home
-      a.btn.btn-primary.btn-lg.main-btn(href='/catalog') Back to catalog
+      h3.title Python Courses
+      br
+      .card
+        .card-header
+          | CMU
+          .card-body
+            h5.card-title Principles of Computing
+            a.btn.btn-primary(href='http://oli.cmu.edu/courses/all-oli-courses/computing-course-details/') Go to the course
+      br
+      .card
+        .card-header
+          | MIT
+          .card-body
+            h5.card-title Introduction to Computer Science and Programming in Python
+            a.btn.btn-primary(href='https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-0001-introduction-to-computer-science-and-programming-in-python-fall-2016/') Go to the course
+      br
+      .card
+        .card-header
+          | Columbia
+          .card-body
+            h5.card-title Analyitics in Python
+            a.btn.btn-primary(href='https://www.edx.org/course/analytics-in-python-1') Go to the course
+      br
+      .card
+        .card-header
+          | UCSD
+          .card-body
+            h5.card-title Python for Data Science
+            a.btn.btn-primary(href='https://www.edx.org/course/python-for-data-science-0') Go to the course
+      br
+      .card
+        .card-header
+          | Georgia Tech
+          .card-body
+            h5.card-title Introduction to Computing in Python
+            a.btn.btn-primary(href='https://www.edx.org/xseries/gtx-introduction-to-computing-in-python#courses') Go to the course
+      br
+      .card
+        .card-header
+          | Harvey Mudd
+          .card-body
+            h5.card-title CS For All: Introduction to Computer Science and Python Programming
+            a.btn.btn-primary(href='https://www.edx.org/course/cs-all-introduction-computer-science-harveymuddx-cs005x-0') Go to the course
