--- a/views/catalog.pug
+++ b/views/catalog.pug
@@ -23,7 +23,7 @@ block content
           .card-body
             h5.card-title Introduction to Python
             p.card-text Python is a general-purpose interpreted, interactive, object-oriented, and high-level programming language. It was created by Guido van Rossum during 1985- 1990. Like Perl, Python source code is also available under the GNU General Public License (GPL). 
-            a.btn.btn-primary(href='/linearAlgebra') Go to the course
+            a.btn.btn-primary(href='/python') Go to the course
       br
       .card
         .card-header
@@ -31,5 +31,5 @@ block content
           .card-body
             h5.card-title Microeconomics
             p.card-text Microeconomics is a branch of economics that studies the behavior of individuals and firms in making decisions regarding the allocation of scarce resources and the interactions among these individuals and firms.
-            a.btn.btn-primary(href='/linearAlgebra') Go to the course
+            a.btn.btn-primary(href='/microeconomics') Go to the course
       br
